# moxin-web

./: .gitignore  Cargo.toml  README.md  wasm.sh
src/: app.rs  birds.rs  lib.rs  main.rs  my_widget.rs  original.cpp  particles.rs
