[package]
name = "moxin-web"
version = "0.2.0"
authors = ["Edward Tan <guofoo@gmail.com>"]
edition = "2021"
description = "Moxin Website built with Makepad"
license = "MIT OR Apache-2.0"

[dependencies]
makepad-widgets = { path = "../makepad/widgets", version = "0.6.0" }

[profile.small]
inherits = "release"
#debug = true
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true